# ox-rs

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  plan.md
crates/adapter-egui/: Cargo.toml
crates/adapter-egui/src/: agent_client.rs  backend.rs  lib.rs  workspace_layout.rs
crates/adapter-fs/: Cargo.toml
crates/adapter-fs/src/: lib.rs
crates/adapter-git/: Cargo.toml
crates/adapter-git/src/: lib.rs
crates/adapter-llm/: Cargo.toml
crates/adapter-llm/src/: lib.rs  ollama.rs  providers_catalog.rs
crates/adapter-llm/src/openrouter/: catalog.rs  mod.rs  slug.rs  sse.rs  wire.rs
crates/adapter-process/: Cargo.toml
crates/adapter-process/src/: lib.rs
crates/adapter-secrets/: Cargo.toml
crates/adapter-secrets/src/: env.rs  lib.rs
crates/adapter-storage/: Cargo.toml
crates/adapter-storage/src/: lib.rs
crates/adapter-tui/: Cargo.toml
crates/adapter-tui/src/: lib.rs
crates/agent-host/: Cargo.toml
crates/agent-host/src/: client.rs  close_request_sink.rs  command.rs  fake.rs  first_turn_sink.rs  git.rs  layout.rs  lib.rs  paths.rs  session_records.rs  session_runtime.rs  slug_generator.rs  spawner.rs  split.rs  workspace.rs  workspace_context.rs
crates/app/: Cargo.toml
crates/app/src/: approval.rs  cancel.rs  fake.rs  lib.rs  ports.rs  stream.rs  use_cases.rs
crates/app/src/config/: mod.rs  providers.default.json  providers.rs  settings.default.json  settings.rs
crates/app/src/lifecycle/: mod.rs
crates/app/src/tools/: bash.rs  edit_file.rs  glob.rs  grep.rs  hashlines.rs  mod.rs  read_file.rs  spill.rs  todo_write.rs  write_file.rs
crates/app/src/use_cases/: mod.rs  runner.rs  tool_loop.rs  turn_event.rs
crates/bin-agent/: Cargo.toml
crates/bin-agent/src/: driver.rs  main.rs
crates/bin-agent/src/driver/: approval_broker.rs  mod.rs  reader.rs  turn.rs
crates/bin-gtk/: Cargo.toml
crates/bin-gtk/assets/: style.css  transcript.html
crates/bin-gtk/src/: actions.rs  app.rs  events.rs  input.rs  main.rs  modals.rs  split_view.rs  splits.rs  transcript.rs  window.rs
crates/bin-gtk/src/objects/: mod.rs  split_object.rs  split_state.rs
crates/bin-gui/: Cargo.toml
crates/bin-gui/src/: main.rs
crates/bin-tauri/: Cargo.toml  tauri.conf.json
crates/bin-tauri/src/: commands.rs  drain.rs  events.rs  lib.rs  main.rs  menu.rs  state.rs
crates/bin-tauri/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/bin-tauri/ui/src/: bridge.ts  dialogs.ts  input.ts  main.ts  selection.ts  splits.ts  state.ts  transcript.ts  types.ts
crates/bin-tauri/ui/src/styles/: main.css
crates/bin-web/: Cargo.toml
crates/bin-web/assets/: app.js  index.html  styles.css
crates/bin-web/src/: assets.rs  lifecycle.rs  main.rs  registry.rs  routes.rs  session.rs  slug.rs  sse.rs  startup.rs  state.rs  test_support.rs
crates/bin-web/src/lifecycle/: close_guard.rs  mod.rs  sinks.rs
crates/bin-web/src/registry/: dispatch.rs  mod.rs  restore.rs  snapshot.rs
crates/bin-web/src/routes/: layout.rs  messages.rs  mod.rs  sessions.rs  static_assets.rs
crates/bin-web/src/session/: methods.rs  mod.rs  pump.rs
crates/domain/: Cargo.toml
crates/domain/src/: close_intent.rs  content_block.rs  lib.rs  message.rs  session.rs  stream.rs
crates/domain/src/stream/: accumulator.rs  mod.rs  snapshot.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
docs/: audit.md  audit2.md  crate-dependencies.d2  port-adapter-map.d2  request-lifecycle.d2  session-lifecycle.d2  system-overview.d2
docs/research/providers/: reasoning.md  streaming.md
experiments/: openrouter_models.json  reasoning_test.py  stream_test.py
src/: main.rs
