[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/app",
    "crates/protocol",
    "crates/adapter-llm",
    "crates/adapter-storage",
    "crates/adapter-fs",
    "crates/adapter-git",
    "crates/adapter-secrets",
    "crates/agent-host",
    "crates/bin-agent",
    "crates/bin-web",
]
