[package]
name = "adapter-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
app = { version = "0.1.0", path = "../app" }
domain = { version = "0.1.0", path = "../domain" }
eframe = "0.31"
tokio = { version = "1.52.0", features = ["sync"] }

[dev-dependencies]
app = { path = "../app", features = ["test-support"] }
tokio = { version = "1.52.0", features = ["rt", "macros"] }
