[package]
name = "adapter-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
app = { version = "0.1.0", path = "../app" }
domain = { version = "0.1.0", path = "../domain" }
eframe = "0.31"
egui-file-dialog = "~0.10"
protocol = { version = "0.1.0", path = "../protocol" }
tokio = { version = "1.52.0", features = ["sync", "io-util", "process", "rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
app = { path = "../app", features = ["test-support"] }
tokio = { version = "1.52.0", features = ["rt", "rt-multi-thread", "macros", "io-util", "process", "time"] }
