[package]
name = "adapter-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
app = { version = "0.1.0", path = "../app" }
domain = { version = "0.1.0", path = "../domain" }
glob = "0.3.3"
tokio = { version = "1.52.0", features = ["fs", "io-util", "process", "time"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.0", features = ["macros", "rt", "process", "time"] }
