[package]
name = "adapter-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
app = { version = "0.1.0", path = "../app" }
domain = { version = "0.1.0", path = "../domain" }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["fs"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.0", features = ["macros", "rt"] }
