[package]
name = "adapter-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-host = { version = "0.1.0", path = "../agent-host" }
anyhow = "1.0.102"
app = { version = "0.1.0", path = "../app" }
async-trait = "0.1.89"
domain = { version = "0.1.0", path = "../domain" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["fs"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.0", features = ["macros", "rt"] }
