[package]
name = "agent-host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
app = { version = "0.1.0", path = "../app" }
async-trait = "0.1.89"
domain = { version = "0.1.0", path = "../domain" }
protocol = { version = "0.1.0", path = "../protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt", "macros", "io-util", "sync", "process", "time"] }

[dev-dependencies]
app = { path = "../app", features = ["test-support"] }
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros", "io-util", "process", "time"] }
