[package]
name = "agent-host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
domain = { version = "0.1.0", path = "../domain" }
protocol = { version = "0.1.0", path = "../protocol" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["rt", "macros", "io-util", "sync"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros", "io-util", "time"] }
