[package]
name = "app"
version = "0.1.0"
edition = "2024"

[features]
test-support = []

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.4"
dirs = "6.0.0"
domain = { version = "0.1.0", path = "../domain" }
futures = "0.3.32"
glob = "0.3.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["sync", "time"] }

[dev-dependencies]
tokio = { version = "1.52.0", features = ["rt", "macros", "sync"] }
