[package]
name = "bin-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ox-agent"
path = "src/main.rs"

[dependencies]
adapter-fs = { version = "0.1.0", path = "../adapter-fs" }
adapter-llm = { version = "0.1.0", path = "../adapter-llm" }
adapter-secrets = { version = "0.1.0", path = "../adapter-secrets" }
adapter-storage = { version = "0.1.0", path = "../adapter-storage" }
anyhow = "1.0.102"
app = { version = "0.1.0", path = "../app" }
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
domain = { version = "0.1.0", path = "../domain" }
futures = "0.3.32"
protocol = { version = "0.1.0", path = "../protocol" }
tokio = { version = "1.52.0", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }

[dev-dependencies]
app = { version = "0.1.0", path = "../app", features = ["test-support"] }
tokio = { version = "1.52.0", features = ["rt-multi-thread", "macros", "io-util"] }
