[package]
name = "bin-gtk"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ox"
path = "src/main.rs"

[dependencies]
adw = { version = "0.9", package = "libadwaita", features = ["v1_7"] }
agent-host = { version = "0.1.0", path = "../agent-host" }
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
domain = { version = "0.1.0", path = "../domain" }
gtk = { version = "0.11", package = "gtk4", features = ["v4_18"] }
protocol = { version = "0.1.0", path = "../protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros", "io-util", "sync", "process", "time"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
webkit6 = { version = "0.6", features = ["gtk_v4_18"] }
