[package]
name = "bin-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ox-gui"
path = "src/main.rs"

[dependencies]
adapter-egui = { version = "0.1.0", path = "../adapter-egui" }
adapter-secrets = { version = "0.1.0", path = "../adapter-secrets" }
anyhow = "1.0.102"
app = { version = "0.1.0", path = "../app" }
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
domain = { version = "0.1.0", path = "../domain" }
tokio = { version = "1.52.0", features = ["rt-multi-thread", "macros"] }
