[package]
name = "bin-tauri"
version = "0.1.0"
edition = "2024"

[lib]
name = "bin_tauri"
path = "src/lib.rs"

[[bin]]
name = "ox-tauri"
path = "src/main.rs"

[dependencies]
adapter-secrets = { version = "0.1.0", path = "../adapter-secrets" }
agent-host = { version = "0.1.0", path = "../agent-host" }
anyhow = "1.0.102"
app = { version = "0.1.0", path = "../app" }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
domain = { version = "0.1.0", path = "../domain" }
protocol = { version = "0.1.0", path = "../protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = "~2.9.5"
tauri-plugin-dialog = "~2.6.0"
tokio = { version = "1.52.1", features = ["full"] }

[build-dependencies]
tauri-build = "2.5.6"
