[package]
name = "bin-web"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ox"
path = "src/main.rs"

[dependencies]
adapter-git = { version = "0.1.0", path = "../adapter-git" }
adapter-llm = { version = "0.1.0", path = "../adapter-llm" }
adapter-process = { version = "0.1.0", path = "../adapter-process" }
adapter-storage = { version = "0.1.0", path = "../adapter-storage" }
agent-host = { version = "0.1.0", path = "../agent-host" }
anyhow = "1.0.102"
app = { version = "0.1.0", path = "../app" }
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
domain = { version = "0.1.0", path = "../domain" }
futures-util = "0.3.32"
protocol = { version = "0.1.0", path = "../protocol" }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "io-util", "sync", "time", "net", "signal"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }

[dev-dependencies]
app = { path = "../app", features = ["test-support"] }
http-body-util = "0.1.3"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
