[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
domain = { version = "0.1.0", path = "../domain" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.52.0", features = ["io-util", "macros", "rt"] }
